from itou.approvals import notifications
from tests.approvals.factories import ProlongationRequestDenyInformationFactory, ProlongationRequestFactory


def test_prolongation_request_created(snapshot):
    prolongation_request = ProlongationRequestFactory(for_snapshot=True)
    email = notifications.ProlongationRequestCreatedForCaseworkerNotification(
        prolongation_request.assigned_to,
        prolongation_request.prescriber_organization,
        prolongation_request=prolongation_request,
    ).build()

    assert email.to == [prolongation_request.assigned_to.email]
    assert email.subject == snapshot(name="subject")
    assert email.body == snapshot(name="body")


def test_prolongation_request_created_reminder(snapshot):
    prolongation_request = ProlongationRequestFactory(for_snapshot=True)
    email = notifications.ProlongationRequestCreatedReminderForCaseworkerNotification(
        prolongation_request.assigned_to,
        prolongation_request.prescriber_organization,
        prolongation_request=prolongation_request,
    ).build()

    assert email.to == [prolongation_request.assigned_to.email]
    assert email.subject == snapshot(name="subject")
    assert email.body == snapshot(name="body")


def test_prolongation_request_granted_employer(snapshot):
    prolongation_request = ProlongationRequestFactory(for_snapshot=True)
    email = notifications.ProlongationRequestGrantedForCaseworkerNotification(
        prolongation_request.declared_by,
        prolongation_request.declared_by_siae,
        prolongation_request=prolongation_request,
    ).build()

    assert email.to == [prolongation_request.declared_by.email]
    assert email.subject == snapshot(name="subject")
    assert email.body == snapshot(name="body")


def test_prolongation_request_granted_jobseeker(snapshot):
    prolongation_request = ProlongationRequestFactory(for_snapshot=True)
    email = notifications.ProlongationRequestGrantedForJobSeekerNotification(
        prolongation_request.approval.user,
        prolongation_request=prolongation_request,
    ).build()

    assert email.to == [prolongation_request.approval.user.email]
    assert email.subject == snapshot(name="subject")
    assert email.body == snapshot(name="body")


def test_prolongation_request_denied_employer(snapshot):
    prolongation_request = ProlongationRequestDenyInformationFactory(for_snapshot=True).request
    email = notifications.ProlongationRequestDeniedForCaseworkerNotification(
        prolongation_request.declared_by,
        prolongation_request.declared_by_siae,
        prolongation_request=prolongation_request,
    ).build()

    assert email.to == [prolongation_request.declared_by.email]
    assert email.subject == snapshot(name="subject")
    assert email.body == snapshot(name="body")


def test_prolongation_request_denied_jobseeker(snapshot, settings):
    prolongation_request = ProlongationRequestDenyInformationFactory(for_snapshot=True).request
    settings.AFPA_DEPARTMENTS = []  # Without Afpa paragraph
    email = notifications.ProlongationRequestDeniedForJobSeekerNotification(
        prolongation_request.approval.user, prolongation_request=prolongation_request
    ).build()

    assert email.to == [prolongation_request.approval.user.email]
    assert email.subject == snapshot(name="subject")
    assert email.body == snapshot(name="body")

    settings.AFPA_DEPARTMENTS = [prolongation_request.approval.user.department]  # With Afpa paragraph
    email = notifications.ProlongationRequestDeniedForJobSeekerNotification(
        prolongation_request.approval.user, prolongation_request=prolongation_request
    ).build()

    assert email.to == [prolongation_request.approval.user.email]
    assert email.subject == snapshot(name="subject")
    assert email.body == snapshot(name="body with Afpa")
